# lance-c

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/: baseline.env
.github/actions/configure-cmake/: action.yml
.github/actions/verify-glibc-baseline/: action.yml
.github/workflows/: ci.yml  consumer-smoke-test.yml  create-release.yml  release-please.yml  release.yml
cmake/: LanceCConfig.cmake.in  baseline.cmake  cargo-version.cmake  lance-c.pc.in  test_cargo_version.cmake
docs/superpowers/plans/: 2026-04-23-phase2-vector-search-indexing.md  2026-04-27-package-distribution.md
docs/superpowers/specs/: 2026-04-23-phase2-vector-search-indexing-design.md  2026-04-27-package-distribution-design.md
examples/cmake-consumer/: CMakeLists.txt  README.md  main.cpp
include/: lance.h  lance.hpp
include/lance/: lance.h  lance.hpp
ports/: README.md
ports/lance-c/: portfile.cmake  usage  vcpkg.json
recipes/: README.md
recipes/lance-c/all/: conandata.yml  conanfile.py
recipes/lance-c/all/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
src/: alter_columns.rs  async_dispatcher.rs  batch.rs  compact.rs  data_statistics.rs  dataset.rs  delete.rs  drop_columns.rs  error.rs  fragment_writer.rs  helpers.rs  index.rs  lib.rs  restore.rs  runtime.rs  scanner.rs  update.rs  versions.rs  writer.rs
tests/: c_api_test.rs  cmake_helpers_test.rs  compile_and_run_test.rs
tests/cpp/: test_c_api.c  test_cpp_api.cpp
