# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright The Lance Authors

[package]
name = "lance-c"
version = "0.1.0"
edition = "2024"
authors = ["Lance Devs <dev@lance.org>"]
license = "Apache-2.0"
repository = "https://github.com/lance-format/lance-c"
readme = "README.md"
description = "C/C++ bindings for the Lance columnar data format"
keywords = ["lance", "ffi", "c", "cpp", "arrow"]
categories = ["database-implementations", "external-ffi-bindings"]
rust-version = "1.91.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lance = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
lance-core = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
lance-index = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
lance-io = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
lance-linalg = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
arrow = { version = "57.0.0", features = ["prettyprint", "ffi"] }
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
half = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
log = "0.4"
pin-project = "1.0"
snafu = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
lance = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
lance-datagen = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
lance-file = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
lance-table = { git = "https://github.com/lance-format/lance.git", rev = "d630106d" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
tempfile = "3"

[profile.release]
panic = "abort"
